Fixing LESS global layout overflow on mobile (3)

--- a/src/styles/layout.less
+++ b/src/styles/layout.less
@@ -1,7 +1,7 @@
 @import './globals.less';
 
 .places {
-    height: 100vh;
+    height: 100%;
     height: -webkit-fill-available;
 }
 
